...
        android:dropDownWidth="wrap_content"
        android:popupBackground="#282828"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/listView_all_incomes_years"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_sortBy_expense"
        app:layout_constraintVertical_bias="0.909" />

    <Spinner
        android:id="@+id/spinner_quarter_expense"
        android:layout_width="155dp"
        android:layout_height="32dp"
...
